Fix metismenu carot wrapping

--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -180,6 +180,41 @@
         background: $white;
       }
 
+      > .mm-toggler-component__wrapper,
+      > .mm-toggler-url__wrapper {
+
+        a {
+          position: relative;
+        }
+
+        > a::after,
+        > button::before {
+
+          @include media-breakpoint-up(md) {
+            position: absolute;
+            right: 50%;
+            bottom: 0;
+            left: 50%;
+            display: block;
+            height: 2px;
+            margin: auto;
+            content: "";
+            background: transparent;
+            opacity: 0.2;
+            transition: all 0.2s ease, background-color 0.2s ease;
+          }
+        }
+
+        > a:hover::after,
+        > button:hover::before,
+        &.active > a::after,
+        &.active > button::before {
+          right: 0;
+          left: 0;
+          background: $white;
+        }
+      }
+
       > button.mm-toggler-link:hover::before,
       &.active > button.mm-toggler-link::before {
         right: 0;
@@ -188,6 +223,21 @@
         [dir="rtl"] & {
           right: .5em;
           left: 0;
+        }
+      }
+
+      > .mm-toggler-component__wrapper,
+      > .mm-toggler-url__wrapper {
+
+        > button.mm-toggler-link:hover::before,
+        &.active > button.mm-toggler-link::before {
+          right: 0;
+          left: .5em;
+
+          [dir="rtl"] & {
+            right: .5em;
+            left: 0;
+          }
         }
       }
     }
@@ -205,6 +255,29 @@
 
       > ul {
         min-width: 12rem;
+      }
+    }
+
+    .metismenu > li.level-1 {
+
+      > .mm-toggler-url__wrapper,
+      > .mm-toggler-component__wrapper {
+
+        > a:hover,
+        > button:hover {
+
+          @include media-breakpoint-up(md) {
+            text-decoration: none;
+          }
+        }
+      }
+
+      li.level-2 {
+
+       .mm-toggler {
+          height: 1.5em;
+          color: $gray-900;
+        }
       }
     }
   }
